# pix-qrcode-gerencianet-rust

./: .gitignore  Cargo.toml  README.md
configuration/: development.yaml.example  production.yaml.example
src/: lib.rs  main.rs
src/gerencianet/: auth.rs  client.rs  cobranca.rs  configuration.rs  credentials.rs  location.rs  mod.rs
